package com.myApp.domain;

import java.util.List;
import java.util.Optional;

public interface ProductRepository {
    List<Product> findAll();
    Optional<Product> findByName(String name);
    void addProduct(Product product);
}
