package com.myApp.domain;

public enum RecyclingCategory {
    PLASTIC,
    PAPER,
    CARDBOARD,
    GLASS,
    METAL,
    BIO_WASTE,
    ELECTRONIC_WASTE,
    TEXTILES
}
