@startuml Diagram

package "presentation" {
    class MainMenu {
      - scanner: Scanner
      - productMenu: ProductMenu
      - materialMenu: MaterialMenu
      + start(): void
      - printMenu(): void
    }

    class ProductMenu {
      - scanner: Scanner
      - productService: ProductService
      - materialService: MaterialService
      + show(): void
      - handleProductSelection(): Product
      - showProductActions(product: Product): void
      - addNewProduct(): void
      - printMenu(): void
    }

    class MaterialMenu {
      - scanner: Scanner
      - materialService: MaterialService
      + show(): void
      - addMaterial(): void
      - listMaterials(): void
      - printMenu(): void
    }
}

package "application" {
    class ProductService {
      - productRepository: ProductRepository
      - impactCalculator: ImpactCalculator
      + ProductService(repo: ProductRepository, calc: ImpactCalculator)
      + listProducts(): List<Product>
      + getProduct(name: String): Optional<Product>
      + addProduct(product: Product): void
      + calculateImpact(product: Product): double
      + setImpactCalculator(calc: ImpactCalculator): void
    }

    class MaterialService {
      - materialRepository: MaterialRepository
      + MaterialService(repo: MaterialRepository)
      + listMaterials(): List<Material>
      + getMaterial(name: String): Optional<Material>
      + addMaterial(material: Material): void
    }

    class RecyclingGuidanceService {
      + fetchGuidance(product: Product): List<String>
    }
}

package "domain" {
    interface ImpactCalculator {
      + calculate(product: Product): double
    }

    class SimpleSumStrategy implements ImpactCalculator {
      + calculate(product: Product): double
    }

    class WeightedByLifespanStrategy implements ImpactCalculator {
      + calculate(product: Product): double
    }

    class Product {
      - name: String
      - category: String
      - estimatedLifeSpan: int
      - materials: List<Material>
      + Product(name: String, category: String, lifespan: int, materials: List<Material>)
      + getName(): String
      + getCategory(): String
      + getEstimatedLifeSpan(): int
      + getMaterials(): List<Material>
    }

    class Material {
      - name: String
      - recyclingCategory: RecyclingCategory
      - recyclingGuidance: List<String>
      - environmentalImpactValue: double
      + Material(name: String, category: RecyclingCategory, guidance: List<String>, impact: double)
      + getName(): String
      + getRecyclingCategory(): RecyclingCategory
      + getRecyclingGuidance(): List<String>
      + getEnvironmentalImpactValue(): double
    }

    enum RecyclingCategory {
      PLASTIC
      PAPER
      CARDBOARD
      GLASS
      METAL
      BIO_WASTE
      ELECTRONIC_WASTE
      TEXTILES
    }

    interface ProductRepository {
      + findAll(): List<Product>
      + findByName(name: String): Optional<Product>
      + addProduct(product: Product): void
    }

    interface MaterialRepository {
      + findAll(): List<Material>
      + findByName(name: String): Optional<Material>
      + addMaterial(material: Material): void
    }

    class LocalProductRepository implements ProductRepository {
      - products: List<Product>
      + findAll(): List<Product>
      + findByName(name: String): Optional<Product>
      + addProduct(product: Product): void
    }

    class LocalMaterialRepository implements MaterialRepository {
      - materials: List<Material>
      + findAll(): List<Material>
      + findByName(name: String): Optional<Material>
      + addMaterial(material: Material): void
    }
}

' Presentation to Application dependencies
MainMenu --> ProductMenu : uses
MainMenu --> MaterialMenu : uses
ProductMenu --> ProductService : uses
ProductMenu --> MaterialService : uses
MaterialMenu --> MaterialService : uses

' Application to Domain dependencies
ProductService --> ProductRepository : depends on
ProductService --> ImpactCalculator : uses
MaterialService --> MaterialRepository : depends on
RecyclingGuidanceService --> Product : analyzes

' Domain relationships
Product "*" --> "*" Material : contains
Product --> ImpactCalculator : analyzed by
Material --> RecyclingCategory : has

SimpleSumStrategy ..> Product : calculates
WeightedByLifespanStrategy ..> Product : calculates

LocalProductRepository --> Product : stores
LocalMaterialRepository --> Material : stores

' Infrastructure relationships
DataLoader --> ProductRepository : populates
DataLoader --> MaterialRepository : populates
DataLoader --> Product : creates
DataLoader --> Material : creates

@enduml